# GLProjFrame

./: .gitignore  CMakeLists.txt  ClickMetoCMake.bat  README.md  _dev's log.txt  dev-log.txt  makefile  release-notes.md
GLProjFrame/: CMakeLists.txt  makefile
GLProjFrame/assets/model/Sponza/: SponzaNoFlag.mtl
GLProjFrame/assets/model/dome/: Dome.mtl
GLProjFrame/include/GLFW/: glfw3.h
GLProjFrame/include/glad/: glad.h
GLProjFrame/include/glpp/: Application.h  Camera.h  GameCamera.h  GameTransform.h  InputManager.h  Loopable.h  Mesh.h  Shader.h  Singleton.h  common_t1.h  glpp.h  util.h
GLProjFrame/lib/: assimp-vc140-mt.lib  glfw3.lib  glfw3_32.lib
GLProjFrame/src/: Application.cpp  Application.h  Camera.cpp  Camera.h  GameCamera.cpp  GameCamera.h  GameTransform.cpp  GameTransform.h  InputManager.cpp  InputManager.h  Loopable.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MyApp.cpp  MyApp.h  Renderable.cpp  Renderable.h  Shader.cpp  Shader.h  Singleton.h  Text.cpp  Text.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Window.cpp  Window.h  common_t1.h  gl_util.cpp  gl_util.h  glad.c  logging.h  main.cpp  util.cpp  util.h
GLProjFrame/src/glpp/: Application.cpp  Camera.cpp  GameCamera.cpp  GameTransform.cpp  InputManager.cpp  Mesh.cpp  Shader.cpp  Texture.cpp  Transform.cpp  Window.cpp  util.cpp
GLProjFrame/src/shaders/: cube.vert.glsl  frag.glsl  light_cube.frag.glsl  light_cube.vert.glsl  mesh-depth_vis.frag.glsl  mesh.frag.glsl  mesh.vert.glsl  text.frag.glsl  text.vert.glsl  vertex.glsl  viewport_grid.frag.glsl  viewport_grid.vert.glsl
test/: CMakeLists.txt  makefile
test/src/: test.cpp  test.h
